Disable fox display reference object in bedrock format Fix display panel aligning to the bottom of sidebar

--- a/css/panels.css
+++ b/css/panels.css
@@ -111,7 +111,7 @@
 	.panel.fixed_height {
 		flex-grow: 0;
 	}
-	.panel.bottommost_panel {
+	.panel.bottommost_panel:not(.topmost_panel) {
 		margin-top: auto;
 	}
 
